made changes on my Education

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <hr color="red">
   <h3>Education</h3>
   <ul>
-    <li>National Diploma at Fed Polytechnic Oko Anambra State</li>
+    <li>National Diploma Computer Engineering at Fed Polytechnic Oko Anambra State</li>
     <li>The complete Web Development Bootcam Udemy</li>
   </ul>
   <hr color="red">
