undated the certificate

--- a/index.html
+++ b/index.html
@@ -28,6 +28,15 @@
     <li>The complete Web Development Bootcam Udemy</li>
   </ul>
   <hr color="red">
+
+
+
+  <h3>Licenses & Certifications</h3>
+  <ul>
+    <li>The Complete 2022 Web Development Bootcamp by Dr. Angela Yu-Udemy</li>
+    <li>The Web Developer Bootcamp 2022 by Colt Steele - Udemy</li>
+  </ul>
+  <hr color="red">
   <h3>Work experirnce </h3>
   <table>
     <thead>
